Permissions: Add permissions to user profile (from local yaml for now)

--- a/permissions/balkan.yaml
+++ b/permissions/balkan.yaml
@@ -1,3 +1,11 @@
 payment-cards:
+  details:
+    - team:CS
   read:
-    groups: ["CS", "CS Systems"]
+    - team:Engineering
+
+comments:
+  read:
+    - team:Engineering/Content + CS Systems
+  write:
+    - team:CS Systems
