--- a/tests/e2e/docker-compose.yaml
+++ b/tests/e2e/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     command: ["nginx-debug", "-g", "daemon off;"]
 
   redis:
-    image: redis
+    image: redis:5.0.4
     container_name: cache
     expose:
       - 6379
