vault: Add secret key mapper

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -1,1 +1,9 @@
-{}
+mappings:
+  -
+    serviceName: "Balkan"
+    allowedEnvironments: ["production", "simondev"]
+    KeyBase: "BALKAN"
+  - 
+    serviceName: "TRANSACTIONAL_MESSAGING_-_NEST_APP"
+    allowedEnvironments: ["production"]
+    KeyBase: "NEST"
