vault: Use UA config for tokens

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -2,8 +2,12 @@ mappings:
   -
     serviceName: "Balkan"
     allowedEnvironments: ["production", "simondev"]
-    KeyBase: "BALKAN"
+    tokenBase: "BALKAN"
   - 
     serviceName: "TRANSACTIONAL_MESSAGING_-_NEST_APP"
-    allowedEnvironments: ["production"]
-    KeyBase: "NEST"
+    allowedEnvironments: []
+    tokenBase: "NEST"
+  -
+    serviceName: "Overseer"
+    allowedEnvironments: []
+    tokenBase: "OVERSEER"
