E2E: Add basic tests for user

--- a/tests/e2e/iam.env
+++ b/tests/e2e/iam.env
@@ -1,8 +1,9 @@
-OKTA_TOKEN="test"
-OKTA_URL="http://nginx"
-REDIS_HOST="cache"
-REDIS_PORT="6379"
-REDIS_LOCK_RETRY_DELAY="1s"
-REDIS_LOCK_EXPIRATION="5s"
+OKTA_TOKEN=test
+OKTA_URL=http://nginx
+REDIS_HOST=cache
+REDIS_PORT=6379
+REDIS_LOCK_RETRY_DELAY=1s
+REDIS_LOCK_EXPIRATION=5s
 PORT=8080
-USE_LOCALHOST="false"
+USE_LOCALHOST=false
+TOKEN_VENOM=testtoken
