--- a/tests/e2e/venom/client_test.yml
+++ b/tests/e2e/venom/client_test.yml
@@ -8,3 +8,37 @@ testcases:
         assertions:
           - result.body ShouldEqual 42
           - result.statuscode ShouldEqual 200
+  - name: Test rejection if authentication header is missing
+    steps:
+      - type: http
+        method: GET
+        url: "{{.url}}/v1/user?email=tester@test.kiwi"
+        assertions:
+          - "result.body ShouldEqual 'Authorization header with token is mandatory\n'"
+          - result.statuscode ShouldEqual 401
+  - name: Test getting missing user
+    steps:
+      - type: http
+        method: GET
+        url: "{{.url}}/v1/user?email=tesr@tester.kiwi"
+        headers:
+          User-Agent: Venom
+          authorization: "testtoken"
+        assertions:
+          - "result.body ShouldEqual 'User tesr@tester.kiwi not found\n'"
+          - result.statuscode ShouldEqual 404
+  - name: Test getting existing user
+    steps:
+      - type: http
+        method: GET
+        url: "{{.url}}/v1/user?email=tester@tester.kiwi"
+        headers:
+          User-Agent: Venom
+          authorization: "testtoken"
+        assertions:
+          - result.bodyjson.firstname ShouldEqual Test
+          - result.bodyjson.lastname ShouldEqual Tester2
+          - result.bodyjson.location ShouldEqual Praha
+          - result.bodyjson.position ShouldEqual Janitor
+          - result.bodyjson.department ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
+          - result.statuscode ShouldEqual 200
