tests: Add Venom to secrets.yaml (e2e tests)

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -11,3 +11,8 @@ mappings:
     serviceName: "Overseer"
     allowedEnvironments: []
     tokenBase: "OVERSEER"
+  -
+    # e2e tests
+    serviceName: "Venom"
+    allowedEnvironments: []
+    tokenBase: "VENOM"
