--- a/tests/e2e/docker-compose.yaml
+++ b/tests/e2e/docker-compose.yaml
@@ -4,7 +4,6 @@ services:
   nginx:
     build:
       context: ./nginx
-      dockerfile: Dockerfile
     command: ["nginx-debug", "-g", "daemon off;"]
 
   redis:
@@ -16,23 +15,28 @@ services:
   kiwi-iam:
     build:
       args:
-        GITLAB_USERNAME: "{GITLAB_USERNAME}"
-        GITLAB_PASSWORD: "{GITLAB_PASSWORD}"
+        - GITLAB_USERNAME
+        - GITLAB_PASSWORD
       context: ../../
-      dockerfile: Dockerfile
     env_file:
       - iam.env
+    environment:
+      REDIS_HOST: ${REDIS_HOST:-cache}
     links:
       - redis
       - nginx
     expose:
       - 8080
+    depends_on:
+      - nginx
+      - redis
 
   venom:
     build:
       context: ./venom
-      dockerfile: Dockerfile
     environment:
       IAM_URL: http://kiwi-iam:8080
     links:
       - kiwi-iam:kiwi-iam
+    depends_on:
+      - kiwi-iam
