API: Add Metrics to apiWrapper
- Adds MetricsService to main.go, apiWrapper
- Adds DDMock to E2E docker-compose
- Updates tests to test that MetricService is called

--- a/tests/e2e/docker-compose.yaml
+++ b/tests/e2e/docker-compose.yaml
@@ -25,11 +25,15 @@ services:
     links:
       - redis
       - nginx
+      - datadog_mock
     expose:
       - 8080
+    ports:
+      - "8080:8080"
     depends_on:
       - nginx
       - redis
+      - datadog_mock
 
   venom:
     build:
@@ -40,3 +44,9 @@ services:
       - kiwi-iam:kiwi-iam
     depends_on:
       - kiwi-iam
+
+  datadog_mock:
+    image: catkins/statsd-logger
+    container_name: datadog
+    expose:
+      - 8125
