permissions: Add Nest RFC-22 settings

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -1,18 +1,17 @@
 mappings:
-  -
-    serviceName: "Balkan"
+  - serviceName: "Balkan"
     allowedEnvironments: ["production", "simondev"]
     tokenBase: "BALKAN"
-  - 
-    serviceName: "TRANSACTIONAL_MESSAGING_-_NEST_APP"
+  - serviceName: "TRANSACTIONAL_MESSAGING_-_NEST_APP"
     allowedEnvironments: []
     tokenBase: "NEST"
-  -
-    serviceName: "Overseer"
+  - serviceName: "nest"
+    allowedEnvironments: ["production", "beta", "development"]
+    tokenBase: "NEST"
+  - serviceName: "Overseer"
     allowedEnvironments: []
     tokenBase: "OVERSEER"
-  -
-    # e2e tests
+  - # e2e tests
     serviceName: "Venom"
     allowedEnvironments: []
     tokenBase: "VENOM"
