permissions: Add rta-tool to services

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -11,6 +11,9 @@ mappings:
   - serviceName: "Overseer"
     allowedEnvironments: []
     tokenBase: "OVERSEER"
+  - serviceName: "rta-tool"
+    allowedEnvironments: ["staging"]
+    tokenBase: "RTA"
   - # e2e tests
     serviceName: "Venom"
     allowedEnvironments: []
