e2e: Basic tests for permissions

--- a/tests/e2e/nginx/default.conf
+++ b/tests/e2e/nginx/default.conf
@@ -1,11 +1,21 @@
 server {
     listen       80;
     root   /mocks;
-    index  index.html index.htm index.json;
+    index  index.json;
     default_type "application/json";
 
     location / {
         try_files $uri $uri/ "${uri}.json" =404;
+    }
+
+    location ~ ^/groups/[a-z0-9]+/users(?:/(.*))?$ {
+        alias /mocks/users/$1;
+        index index.json;
+    }
+
+    location ~ ^/users/[a-z0-9]+/groups(?:/(.*))?$ {
+        alias /mocks/groups/$1;
+        index index.json;
     }
 
     # Simulate Okta pagination
