E2E: Use Vault for tests

--- a/tests/e2e/iam.env
+++ b/tests/e2e/iam.env
@@ -1,9 +1,14 @@
-OKTA_TOKEN=test
 OKTA_URL=http://nginx
+
 REDIS_PORT=6379
 REDIS_LOCK_RETRY_DELAY=1s
 REDIS_LOCK_EXPIRATION=5s
+
 PORT=8080
 USE_LOCALHOST=false
-TOKEN_VENOM=testtoken
+
+VAULT_ADDR=http://nginx
+VAULT_TOKEN=token
+VAULT_NAMESPACE=namespace
+
 DD_AGENT_HOST=datadog_mock
