secrets: Add envs for rta-tool

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -12,7 +12,7 @@ mappings:
     allowedEnvironments: []
     tokenBase: "OVERSEER"
   - serviceName: "rta-tool"
-    allowedEnvironments: ["staging"]
+    allowedEnvironments: ["staging", "dev", "prod"]
     tokenBase: "RTA"
   - # e2e tests
     serviceName: "Venom"
