E2E: mock Okta pagination
Add pagination with many users and tests, to discover early on issues
like this:
https://gitlab.skypicker.com/platform/security/iam/merge_requests/174

--- a/tests/e2e/nginx/default.conf
+++ b/tests/e2e/nginx/default.conf
@@ -1,12 +1,32 @@
 server {
     listen       80;
+    root   /mocks;
+    index  index.html index.htm index.json;
+    default_type "application/json";
 
     location / {
-        default_type "application/json";
-        try_files $uri $uri/ $uri.json =404;
+        try_files $uri $uri/ "${uri}.json" =404;
+    }
 
-        root   /mocks;
-        index  index.html index.htm index.json;
+    # Simulate Okta pagination
+    location ~ /users/(?:index.json)?$ {
+        try_files $uri $uri/ "${uri}.json" =404;
+
+        add_header Link '<http://nginx/users/>; rel="self"';
+        add_header Link '<http://nginx/users/page2>; rel="next"';
+    }
+
+    location ~ /users/page2(?:.json)?$ {
+        try_files $uri $uri/ "${uri}.json" =404;
+
+        add_header Link '<http://nginx/users/page2>; rel="self"';
+        add_header Link '<http://nginx/users/page3>; rel="next"';
+    }
+
+    location ~ /users/page3(?:.json)?$ {
+        try_files $uri $uri/ "${uri}.json" =404;
+
+        add_header Link '<http://nginx/users/page3>; rel="self"';
     }
 
     # To allow POST on static pages
