--- a/tests/e2e/venom/client_test.yml
+++ b/tests/e2e/venom/client_test.yml
@@ -41,6 +41,10 @@ testcases:
           - result.bodyjson.location ShouldEqual Praha
           - result.bodyjson.position ShouldEqual Janitor
           - result.bodyjson.department ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
+          - result.bodyjson.teammembership.teammembership1 ShouldEqual "Engineering"
+          - result.bodyjson.teammembership.teammembership2 ShouldEqual "Engineering/Content + CS Systems"
+          - result.bodyjson.teammembership.teammembership3 ShouldEqual "Engineering/Content + CS Systems/CS systems"
+          - result.bodyjson.teammembership.teammembership4 ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
           - result.statuscode ShouldEqual 200
   - name: Test getting existing user with deprecated token scheme
     steps:
@@ -56,6 +60,10 @@ testcases:
           - result.bodyjson.location ShouldEqual Praha
           - result.bodyjson.position ShouldEqual Janitor
           - result.bodyjson.department ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
+          - result.bodyjson.teammembership.teammembership1 ShouldEqual "Engineering"
+          - result.bodyjson.teammembership.teammembership2 ShouldEqual "Engineering/Content + CS Systems"
+          - result.bodyjson.teammembership.teammembership3 ShouldEqual "Engineering/Content + CS Systems/CS systems"
+          - result.bodyjson.teammembership.teammembership4 ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
           - result.statuscode ShouldEqual 200
   - name: Test getting existing non-cached user
     steps:
@@ -71,6 +79,10 @@ testcases:
           - result.bodyjson.location ShouldEqual Praha
           - result.bodyjson.position ShouldEqual Janitor
           - result.bodyjson.department ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
+          - result.bodyjson.teammembership.teammembership1 ShouldEqual "Engineering"
+          - result.bodyjson.teammembership.teammembership2 ShouldEqual "Engineering/Content + CS Systems"
+          - result.bodyjson.teammembership.teammembership3 ShouldEqual "Engineering/Content + CS Systems/CS systems"
+          - result.bodyjson.teammembership.teammembership4 ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
           - result.statuscode ShouldEqual 200
   - name: Test GET /v1/teams
     steps:
