secrets: Add overseer envs

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -9,7 +9,7 @@ mappings:
     allowedEnvironments: ["production", "beta", "development"]
     tokenBase: "NEST"
   - serviceName: "Overseer"
-    allowedEnvironments: []
+    allowedEnvironments: ["production", "dev", "sandbox"]
     tokenBase: "OVERSEER"
   - serviceName: "rta-tool"
     allowedEnvironments: ["staging", "dev", "prod"]
