User-Agent: reject request with non compliant UA

--- a/config/secrets/secrets.yaml
+++ b/config/secrets/secrets.yaml
@@ -16,5 +16,5 @@ mappings:
     tokenBase: "RTA"
   - # e2e tests
     serviceName: "Venom"
-    allowedEnvironments: []
+    allowedEnvironments: ["test"]
     tokenBase: "VENOM"
