--- a/tests/e2e/venom/variables.yml
+++ b/tests/e2e/venom/variables.yml
@@ -1,2 +1,5 @@
 # url of the conveyance-store without slash at the end.
 url: "{{.IAM_URL}}"
+serviceName: "kiwi.iam.user.v1.KiwiIAM"
+httpPort: "8080"
+grpcPort: "7777"
