--- a/tests/e2e/venom/http_client_test.yml
+++ b/tests/e2e/venom/http_client_test.yml
@@ -16,13 +16,15 @@ testcases:
         headers:
           User-Agent: "Venom/0 (Kiwi.com test)"
         assertions:
-          - "result.body ShouldEqual 'Authorization header with token is mandatory\n'"
+          - "result.body ShouldEqual 'Use the Bearer {token} authorization scheme\n'"
           - result.statuscode ShouldEqual 401
   - name: Test missing user agent
     steps:
       - type: http
         method: GET
         url: "http://{{.url}}:{{.httpPort}}/v1/user?email=cached@test.kiwi"
+        headers:
+          authorization: "Bearer testtoken"
         assertions:
           - "result.body ShouldEqual 'user agent string is not compliant with Kiwi RFC-22\n'"
           - result.statuscode ShouldEqual 401
@@ -86,17 +88,8 @@ testcases:
           User-Agent: "Venom/0 (Kiwi.com test)"
           authorization: "testtoken"
         assertions:
-          - result.bodyjson.firstname ShouldEqual Test
-          - result.bodyjson.lastname ShouldEqual Cached
-          - result.bodyjson.location ShouldEqual Praha
-          - result.bodyjson.position ShouldEqual Janitor
-          - result.bodyjson.department ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
-          - result.bodyjson.teammembership.teammembership1 ShouldEqual "Engineering"
-          - result.bodyjson.teammembership.teammembership2 ShouldEqual "Engineering/Content + CS Systems"
-          - result.bodyjson.teammembership.teammembership3 ShouldEqual "Engineering/Content + CS Systems/CS systems"
-          - result.bodyjson.teammembership.teammembership4 ShouldEqual "Engineering/Content + CS Systems/CS systems/CS Systems Frontend"
-          - result.bodyjson ShouldNotContainKey permissions
-          - result.statuscode ShouldEqual 200
+          - "result.body ShouldEqual 'Use the Bearer {token} authorization scheme\n'"
+          - result.statuscode ShouldEqual 401
   - name: Test getting existing non-cached user
     steps:
       - type: http
