--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,7 +27,7 @@ linters-settings:
     min-len: 2
     min-occurrences: 3
   goimports:
-    local-prefixes: gitlab.skypicker.com/search-team/gonuts/conveyance-store
+    local-prefixes: github.com/kiwicom/iam
   lll:
     line-length: 140
   maligned:
@@ -38,12 +38,11 @@ linters-settings:
 linters:
   enable-all: true
   disable:
-  # prealloc is not recommended by `golangci-lint` developers.
-  - prealloc
-  - gochecknoglobals
+    # prealloc is not recommended by `golangci-lint` developers.
+    - prealloc
+    - gochecknoglobals
 
 issues:
-
   exclude-rules:
     - path: _test\.go
       linters:
