--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,8 +5,22 @@ pull_request_rules:
       - "status-success=ci/circleci: nocache"
       - "status-success=ci/circleci: test"
       - status-success=GolangCI
+      # Pull Request approval enforcement
       - "#approved-reviews-by>=1"
+      - "#review-requested=0"
+      - "#changes-requested-reviews-by=0"
+      - "#commented-reviews-by=0"
+      - label!=work-in-progress
     actions:
       merge:
         method: rebase
         strict: true
+  - name: remove outdated reviews
+    conditions:
+      - base=master
+    actions:
+      dismiss_reviews: {}
+  - name: delete head branch after merge
+    conditions: []
+    actions:
+      delete_head_branch: {}
