--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2
 
 jobs:
+  # Test Jobs
   build:
     docker:
       - image: golang:1.12.7
@@ -43,14 +44,24 @@ jobs:
           REDIS_HOST=nocache make e2e
           make e2e/env-stop
 
+  # Deploy Jobs
+  deploy/sandbox:
+    docker:
+      - image: golang:1.12.7
+    steps:
+      - run: |
+          curl -X POST \
+               -F token=$GITLAB_CI_TOKEN \
+               -F ref=master \
+               -F "variables[GIT_SHA1]=$CIRCLE_SHA1" \
+               https://gitlab.skypicker.com/api/v4/projects/1680/trigger/pipeline
+
   publish/docs:
     docker:
       - image: cibuilds/hugo:latest
     working_directory: ~/www
     environment:
       HUGO_BUILD_DIR: ~/www/public
-    branches:
-      only: master
     steps:
       - run: apk update && apk add git
       - checkout
@@ -77,8 +88,9 @@ workflows:
       - e2e-tests/nocache
   deploy:
     jobs:
-      - publish/docs:
+      - deploy/sandbox: &only-master
           filters:
             branches:
               only:
                 - master
+      - publish/docs: *only-master
