--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,13 @@ jobs:
       - checkout
       - run: make swagger-validate
 
+  validate-commits:
+    docker:
+      - image: fallion/commitsar
+    steps:
+      - checkout
+      - run: commitsar
+
   test:
     docker:
       - image: golang:1.12.7
@@ -116,6 +123,7 @@ workflows:
               ignore:
                 - master
       - validate-swagger: *ignore-master
+      - validate-commits: *ignore-master
       - test: *ignore-master
       - e2e-tests: *ignore-master
       - e2e-tests/nocache: *ignore-master
