--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,20 +9,6 @@ jobs:
       - checkout
       - run: make build
 
-  prototool-lint:
-    docker:
-      - image: uber/prototool
-    steps:
-      - checkout
-      - run: prototool lint
-
-  validate-swagger:
-    docker:
-      - image: quay.io/goswagger/swagger
-    steps:
-      - checkout
-      - run: make swagger-validate
-
   test:
     docker:
       - image: golang:1.13.0
@@ -110,13 +96,11 @@ workflows:
       - build
   test:
     jobs:
-      - prototool-lint: &ignore-master
+      - test: &ignore-master
           filters:
             branches:
               ignore:
                 - master
-      - validate-swagger: *ignore-master
-      - test: *ignore-master
       - e2e-tests: *ignore-master
       - e2e-tests/nocache: *ignore-master
   deploy:
