--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,11 +8,14 @@ jobs:
   build:
     name: Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [1.12, 1.13]
     steps:
-      - name: Set up Go
+      - name: Set up Go ${{ matrix.go }}
         uses: actions/setup-go@v1
         with:
-          go-version: 1.13
+          go-version: ${{ matrix.go }}
         id: go
 
       - name: Check out code into the Go module directory
