fix: Fix missing ignore comments
Signed-off-by: Matous Dzivjak <matousdzivjak@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -43,7 +43,9 @@ linters:
   disable:
     # prealloc is not recommended by `golangci-lint` developers.
     - prealloc
+    # global values are used on many places but meaningfully, this makes more sense then adding multiple ignore comments
     - gochecknoglobals
+    # wsl *forces* you to use spaces on many places and makes the code very very long (unnecessarily)
     - wsl
 
 issues:
