feat(secrets): change default secrets path (#275)

--- a/.env-sample.yaml
+++ b/.env-sample.yaml
@@ -12,7 +12,7 @@ REDIS_HOST: "localhost"
 REDIS_PORT: "6379"
 
 # Path to the JSON file with tokens / secrets
-SECRETS_PATH: "/etc/vault/iam-secrets-from-vault.json"
+SECRETS_PATH: "/etc/vault/secrets.json"
 
 # Token format to be used when using in-memory tokens
 TOKEN: "token_placeholder"
